--- a/slides/apunte.tex
+++ b/slides/apunte.tex
@@ -28,32 +28,28 @@
 
 \pagestyle{empty}
 
-
-\begin{tabular}{rl}
-
-
-& \\
-& \\
-& Universidad de Chile\\
-& Departamento de Ciencias de la Computación
-\end{tabular}
-\vskip 1.5cm
-
-\begin{center}
-
-{\large Procesamiento de Lenguaje Natural}
-
-\vskip 2.0cm
-
-
-
-
-
-
-\vskip 1.5cm
-Felipe Bravo-Márquez
-\end{center}
-
+\begin{titlepage}
+    \begin{center}
+        \vspace*{1cm}
+        \includegraphics[width=2cm]{pics/escudocolor.png} % Replace "pics/escudocolor.png" with the filename and path of your logo image
+        \vspace{1cm}
+        
+        {\Huge\textbf{Universidad de Chile}} \\
+        \vspace{0.5cm}
+        {\Large Departamento de Ciencias de la Computación} \\
+        \vspace{2cm}
+        
+        {\Huge\textbf{Procesamiento de Lenguaje Natural}} \\
+        \vspace{0.5cm}
+        {\Large Apuntes de Clases} \\
+        \vspace{2cm}
+        
+        {\Large Felipe Bravo-Márquez} \\
+        \vspace{2cm}
+        
+        {\large \today}
+    \end{center}
+\end{titlepage}
 
 \newpage
 \thispagestyle{empty}
